fix: increase readability of restaurants-list p font

--- a/css/styles.css
+++ b/css/styles.css
@@ -198,7 +198,7 @@ nav h1 a {
 }
 #restaurants-list p {
   margin: 0;
-  font-size: 11pt;
+  font-size: 15pt;
 	text-align: center;
 	margin: 0px 10px;
 }
